# Apply1C

./: CMakeLists.txt  README.md  readme.md
cmake/: FetchLib.cmake
project/: CImgAdaptor.h  GameMap.h  LodeAdaptor.h  lodepng.cpp  lodepng.h  main.cpp  recognizer.h
test/: test.cpp
